[metadata]
name = meinconf
summary = 12 factor configuration for all
description-file = README.md
home-page = https://github.com/akatrevorjay/meinconf
author = Trevor Joynson
author_email = github@skywww.net
license = GPL
keywords = 
    12factor
    configuration
    config
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Plugins
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development
    Topic :: Software Development :: Libraries

[files]
packages = 
    meinconf

;[build_sphinx]
;source-dir = docs/
;build-dir = docs/_build
;all_files = 1

;[upload_sphinx]
;upload-dir = doc/_build/html

[aliases]
test=pytest
