[metadata]
name = ein
summary = 12 factor configuration for any framework.
description-file = README.rst
home-page = https://github.com/akatrevorjay/ein
author = Trevor Joynson
author_email = github@skywww.net
license = GPL
keywords = 
    12factor
    configuration
    config
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Plugins
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development
    Topic :: Software Development :: Libraries

[files]
packages =
    ein

;[build_sphinx]
;source-dir = docs/
;build-dir = docs/_build
;all_files = 1

;[upload_sphinx]
;upload-dir = doc/_build/html
